# daktaritb-mcp

./: .dockerignore  .env.example  .gitignore  BENCHMARK_REPORT.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
demo/: README.md  daktaritb_sample_bundle.json  generate_fhir_bundle.py
scripts/: run_clinical_benchmark.py  seed_demo_patients.py
src/daktaritb_mcp/: __init__.py  config.py  server.py
src/daktaritb_mcp/fhir/: __init__.py  client.py  context.py  schemas.py
src/daktaritb_mcp/kenya_moh/: __init__.py  pdf_renderer.py  tb_notification.py
src/daktaritb_mcp/mcp/: __init__.py  initialize.py  protocol.py
src/daktaritb_mcp/tools/: __init__.py  adjust_art_for_rif.py  base.py  generate_tb_notification.py  order_tb_workup.py
tests/: test_initialize.py  test_tools_list.py
tests/clinical/: __init__.py  fixtures.py  scenarios.py  test_benchmark.py
tests/fhir/: test_context.py
tests/tools/: test_adjust_art_for_rif.py  test_generate_tb_notification.py  test_order_tb_workup.py
